[java] removed most of guava from remote package